k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterbloom-svc
  namespace: default
spec:
  selector:
    app: clusterbloom
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
